Add prices use case (#1)
* Added unit tests

* Added integration tests
