# src/main/java/com/inditex/retail/pricing/prices/core/model/Book.java
@@ -1,11 +1,0 @@
-package com.inditex.retail.pricing.prices.core.model;
-
-public interface Book {
-    Long getId() ;
-    String getTitle();
-    String getAuthor();
-
-    Book setId(Long id);
-    Book setTitle(String title);
-    Book setAuthor(String author);
-}
